<resources>
    <string name="app_name">Learning App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_string_home">Home</string>
    <string name="bottom_string_code">Code</string>
    <string name="bottom_string_quiz">Quiz</string>
    <string name="drawer_pdf">Book</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_rate">Rate</string>
    <string name="drawer_about">About Us</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Login_user">Sign in</string>
    <string name="Login_email">Enter Email</string>
    <string name="Login_password">Enter Password</string>
    <string name="Login_register_user">Register</string>
    <string name="Login_forgot">Forgot Password</string>
</resources>